# home-assistant-config

./: .gitignore  README.md  automations.yaml  configuration.yaml  pyproject.toml
scripts/: sanitize_yaml.py
tests/: conftest.py  test_automation_guards.py  test_bedroom_auto_on.py  test_bedroom_occupancy.py
